--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "cross-env next-sitemap --config next-sitemap.js"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -27,8 +28,10 @@
     "@types/react-dom": "18.0.4",
     "@types/shortid": "^0.0.29",
     "autoprefixer": "^10.4.7",
+    "cross-env": "^7.0.3",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "next-sitemap": "^2.5.25",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
